# Wikitenaur-Image-Downloader

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
_ImagesList/0/: 02.txt  05.txt  06.txt  09.txt  0a.txt  0e.txt  0f.txt
_ImagesList/1/: 10.txt  12.txt  19.txt  1b.txt  1d.txt  1f.txt
_ImagesList/2/: 21.txt  22.txt  23.txt  26.txt  28.txt  2a.txt  2b.txt  2d.txt  2f.txt
_ImagesList/3/: 31.txt  34.txt  35.txt  39.txt  3c.txt  3f.txt
_ImagesList/4/: 41.txt  42.txt  47.txt  4a.txt  4c.txt  4d.txt
_ImagesList/5/: 51.txt  52.txt  53.txt  54.txt  55.txt  56.txt  57.txt  58.txt  59.txt  5a.txt  5b.txt  5c.txt  5d.txt  5e.txt
_ImagesList/6/: 61.txt  63.txt  65.txt  69.txt  6a.txt  6b.txt  6d.txt  6f.txt
_ImagesList/7/: 70.txt  71.txt  72.txt  73.txt  74.txt  75.txt  78.txt  79.txt  7a.txt  7c.txt  7d.txt  7f.txt
_ImagesList/8/: 82.txt  83.txt  86.txt  8b.txt  8c.txt  8e.txt
_ImagesList/9/: 96.txt  98.txt  9b.txt  9d.txt  9e.txt  9f.txt
_ImagesList/a/: a1.txt  a2.txt  a3.txt  a5.txt  a6.txt  a7.txt  a9.txt  aa.txt  ae.txt  af.txt
_ImagesList/b/: b1.txt  b4.txt  b5.txt  b6.txt  b8.txt  ba.txt  bb.txt  be.txt
_ImagesList/c/: c1.txt  c4.txt  c6.txt  c7.txt  c9.txt  cc.txt  cd.txt  ce.txt  cf.txt
_ImagesList/d/: d1.txt  d5.txt  d6.txt  d8.txt  d9.txt  dc.txt  de.txt
_ImagesList/e/: e2.txt  e3.txt  e7.txt  e9.txt  ea.txt  ec.txt  ed.txt  ef.txt
_ImagesList/f/: f0.txt  f3.txt  f5.txt  f7.txt  f8.txt  f9.txt  fa.txt  (+5 more)
include/: config.h
src/: downloader.cpp  downloader.h  file_utils.cpp  file_utils.h  main.cpp
